fetch meals error handling

--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -8,7 +8,12 @@
 .MealsLoading {
   text-align: center;
   color: white;
-} 
+}
+
+.MealsError {
+  text-align: center;
+  color: red;
+}
 
 .meals ul {
   list-style: none;
